Eevee in command-line batch mode is slow with particles/duplis #59649

Closed
opened 2018-12-20 01:42:25 +01:00 by Jason Clarke · 8 comments

System Information
Operating system: Windows 10 64bit v1809
Graphics card: Nvidia RTX 2070

Blender Version
2.80, c4ee77cde8 2018-12-19 22:13

Short description of error
When rendering on the command line (using blender -b) with Eevee and particles set to object/group mode, the render is extremely slow. (in the attached example, 0.5 seconds in Blender GUI vs almost 10 seconds in batch mode).

The culprit appears to be Eevee writing a "syncing" message to output for every instance, as in the attached example file 80% of the render time is spent writing the message "Syncing Suzzane" over and over for some 7-8 seconds.

Exact steps for others to reproduce the error
Load a .blend with a very large number of duplis (several thousand will do). An example is here: eevee_duplis.blend
Render in the Blender interface, then render the same file on the command line via blender -b
Note the much slower render time and the massive console spam.

**System Information** Operating system: Windows 10 64bit v1809 Graphics card: Nvidia RTX 2070 **Blender Version** 2.80, c4ee77cde8b0 2018-12-19 22:13 **Short description of error** When rendering on the command line (using blender -b) with Eevee and particles set to object/group mode, the render is extremely slow. (in the attached example, 0.5 seconds in Blender GUI vs almost 10 seconds in batch mode). The culprit appears to be Eevee writing a "syncing" message to output for every instance, as in the attached example file 80% of the render time is spent writing the message "Syncing Suzzane" over and over for some 7-8 seconds. **Exact steps for others to reproduce the error** Load a .blend with a very large number of duplis (several thousand will do). An example is here: [eevee_duplis.blend](https://archive.blender.org/developer/F6011180/eevee_duplis.blend) Render in the Blender interface, then render the same file on the command line via blender -b Note the much slower render time and the massive console spam.
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I can't reproduce it.

Can you give me the exact command you use for rendering?

I can't reproduce it. Can you give me the exact command you use for rendering?
Author

blender -b eevee_duplis.blend -f 60

Make sure particles are baked, not sure if that cache transferred with the file correctly.

Early frames will have fewer objects and might not show the issue as a result.

## blender -b eevee_duplis.blend -f 60 Make sure particles are baked, not sure if that cache transferred with the file correctly. Early frames will have fewer objects and might not show the issue as a result.

Added subscriber: @brecht

Added subscriber: @brecht

This is likely specific to Windows and the command prompt, which is inefficient at printing large amounts of text.

Still it's not so useful to print this for every instance.

This is likely specific to Windows and the command prompt, which is inefficient at printing large amounts of text. Still it's not so useful to print this for every instance.
Clément Foucault was assigned by Philipp Oeser 2019-01-15 12:20:53 +01:00

This issue was referenced by 7cbd1b0c98

This issue was referenced by 7cbd1b0c98cc974b8cfb4f92da19249346062319

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59649
No description provided.