Eevee: Render: Reduce debug print amount to not decrease perf

This is to fix the slowdown issue experienced on windows when rendering
from command line.

Fix T59649 Eevee in command-line batch mode is slow with particles/duplis